[BSS-16212] Fix to enable sidebar scrolling and disable map scrolling through overlay elements
Summary:
  - Scroll bar appears automatically in left sidebar when content is too big
  - Now map won't scroll while scrolling in sidebar or when in shift-click barcode menu.

Reviewers: chandan.p!

Subscribers: jenkins

JIRA Issues: BSS-16212

Differential Revision: https://phab.greyorange.com/D5741

--- a/client/src/components/Map/Sidebar/LeftSidebar.css
+++ b/client/src/components/Map/Sidebar/LeftSidebar.css
@@ -47,6 +47,12 @@
   left: 0;
 }
 
+.menu-data-container {
+  position: relative;
+  height: 100vh;
+  overflow: auto;
+}
+
 #version-text {
   position: absolute;
   bottom: 10px;
